@@ -1,3 +1,9 @@
+Tue Oct 26 14:50:34 2004  George Lebl <jirka@5z.com>
+
+	* daemon/gdm.c, daemon/server.c: Make autologin work on a second
+	  display if the first display started is an unhandled or a chooser
+	  server.
+
 2004-10-21  Brian Cameron  <brian.cameron@sun.com>
 
 	* acconfig.h, configure.in, config/gdm.conf.in: Set up Xnest
